# gambit

./: CMakeLists.txt  main.cc
src/: gambit.h
src/core/: dvector.cc  matrix.cc  pvector.cc  sqmatrix.cc  vector.cc
src/linalg/: btableau.cc  btableau.h  lemketab.cc  lemketab.h  lemketab.imp  lhtab.cc  lhtab.h  lhtab.imp  lpsolve.cc  lpsolve.h  lptab.cc  lptab.imp  ludecomp.cc  tableau.cc  tableau.h
src/solvers/enummixed/: enummixed.cc
src/tools/enummixed/: enummixed.cc
